Fixing the bootstrap nabber collapse broken and choppy animation

--- a/src/styles/common/header.scss
+++ b/src/styles/common/header.scss
@@ -90,23 +90,22 @@
 }
 //navbar header styles end
 
-@media screen and(min-width: 768px){
-  //.header {
-  //  .headerMenu{
-  //    float: right;
-  //  }
-  //}
-  .navbar-nav{
-    float: right;
-  }
-}
+//@media screen and(min-width: 768px){
+//  //.header {
+//  //  .headerMenu{
+//  //    float: right;
+//  //  }
+//  //}
+//  .headerMenu{
+//    float: right;
+//  }
+//}
 
 //navbar header responsiveness
 @media(max-width: 767px) {
 
   .navbar-nav .nav-item + .nav-item{
     margin-left: 0;
-    //padding-left:0;
   }
   #navContent {
     clear: both;
